Prevent Gravatar from wrapping

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -5,6 +5,7 @@
 */
 
 .gravatar {
+  display: inline-block;
   font-weight: normal;
   img {
     margin-right: 3px;
